[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reloved-social-engine"
version = "0.1.0"
description = "AI-assisted social content engine for ReLoved"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.68.0",
  "Pillow>=10.4.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
